 - fix #5461 (classified)
 - fix #5404 (MoveCtrl.SetGunshipMoveTypeData crash if called for a non-gunship unit)
 - fix #5483 (glDeleteList called from multiple threads)
 - fix #5423 (random number generation in defs.lua)
 - fix #5396 (units lacking sensors on fire-platforms)
 - fix #5339 (crash when placing a geothermal)
 - fix #5338 (grid-patterns in unsynced heightmap)    



-- 103.0 --------------------------------------------------------
General:
 - Fix & Improve performace
 - Add 'allowTake' modoption (default: true) to enable/disable /take (by lamer)
 - Add onlyLocal boolean value to modinfo.lua (default false)
   If true, spring won't listen for incoming connections when running
   this game unless GAME\OnlyLocal is specified in the start script.

Sim:
 - Add new UnitDef tag "buildingMask" and LuaSyncedCtrl function "SetSquareBuildingMask". (by ivand)
   Both used in conjunction to allow/disallow construction of certain unit types (via setting buildingMask)
   on certain tiles (via SetSquareBuildingMask). By default all tiles and buildings have mask of 1

Rendering:
 - Ghosted buildings are now consistent when changing specTeam/specFullView


Bugfixes:
 - Fix #5301 (Units with restricted firearcs do not turn to aim)
 - Fix #5302 (extreme slowdown)



-- 102.0 --------------------------------------------------------
General:
 - Fix & Improve LoS performance
 ! remove LuaModUICtrl config setting
 ! remove ClassicGroundMoveType
 ! remove SpringLobby from spring installer
 - update model matrices on demand instead of once per frame

Sim:
 ! allow units to unstuck themselves from an unpathable square
   into an adjacent pathable one
 ! COB: deprecate unit/team/allyteam/global vars. Use lua functions instead
 - prevent accidental friendly fire from direct line of fire weapons

Lua:
 - Add {Set,Get}FeatureRulesParam(s)
 ! Get{Game,Team,Unit,Feature}RulesParams will now return { paramName = value, ... }